--- a/src/components/Navbar/Nav.module.scss
+++ b/src/components/Navbar/Nav.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // padding: 1rem;
+  padding-block: 1rem;
   margin-bottom: 2rem;
 
   button {
