todo: finish the options thingy

--- a/src/components/Paintings/Paintings.module.scss
+++ b/src/components/Paintings/Paintings.module.scss
@@ -84,7 +84,7 @@ main {
       background-color: var(--clr-gold);
       position: absolute;
       left: 0;
-      top: 30%;
+      top: 24px;
     }
 
     .painting_item_header {
