--- a/src/globals.scss
+++ b/src/globals.scss
@@ -19,6 +19,7 @@
   --secondary-black: #1a1818;
   --clr-gold: #ab8956;
 
+  --primary-darkGrey: #575757;
   --primary-lightgrey: #dedede;
 
   --font-headers: 'commer';
