--- a/src/globals.scss
+++ b/src/globals.scss
@@ -5,26 +5,40 @@
 }
 
 @font-face {
-  font-family: 'commer';
-  src: url('./assets/fonts/CormorantSC-Regular.ttf');
+  font-family: "commer";
+  src: url("./assets/fonts/CormorantSC-Regular.ttf");
 }
 
 @font-face {
-  font-family: 'inter';
-  src: url('./assets/fonts/Inter.ttf');
+  font-family: "inter";
+  src: url("./assets/fonts/Inter.ttf");
 }
 
 :root {
-  --primary-black: #121212;
-  --secondary-black: #1a1818;
-  --clr-gold: #ab8956;
+  --primary-clr: #121212;
+  --secondary-clr: #1a1818;
+  --accent-clr: #ab8956;
+
+  --header-clr: #fff;
 
   --primary-darkGrey: #575757;
   --primary-lightgrey: #dedede;
+  --secondary-grey: #9c9c9c;
 
-  --font-headers: 'commer';
-  --font-years: 'inter';
-  --font-main: 'inter';
+  --font-headers: "commer";
+  --font-years: "inter";
+  --font-main: "inter";
+}
+
+[data-theme="light"] {
+  --primary-clr: #fff;
+  --secondary-clr: #fcfcfc;
+  --accent-clr: #9b4b4b;
+
+  --header-clr: #121212;
+
+  --primary-darkGrey: #575757;
+  --primary-lightgrey: #dedede;
 }
 
 html,
