--- a/src/components/Navbar/Nav.module.scss
+++ b/src/components/Navbar/Nav.module.scss
@@ -13,7 +13,7 @@
     cursor: pointer;
     width: 40px;
     height: 40px;
-    background-color: var(--secondary-black);
+    background-color: var(--secondary-clr);
     border-radius: 2rem;
   }
 }
