--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -11,12 +11,25 @@
 
   .pagination_item {
     padding: 0.5rem 0.7rem;
-    transition: 0.25s ease all;
     cursor: pointer;
     border-radius: 4px;
+    position: relative;
+    color: var(--header-clr);
 
-    &:hover {
-      background-color: var(--secondary-black);
+    &::before {
+      content: "";
+      width: 100%;
+      height: 1px;
+      bottom: 0;
+      position: absolute;
+      left: 0;
+      background-color: var(--primary-lightgrey);
+      opacity: 0;
+      transition: opacity 0.25s ease;
+    }
+
+    &:hover::before {
+      opacity: 1;
     }
   }
 
@@ -25,10 +38,11 @@
     transition: 0.25s ease all;
     cursor: pointer;
     border-radius: 4px;
-    background-color: var(--secondary-black);
+    background-color: var(--secondary-clr);
+    color: var(--header-clr);
   }
 
-  button {
+  .arrowBtn {
     outline: none;
     border: none;
     background: none;
@@ -41,7 +55,21 @@
     border-radius: 4px;
 
     &:hover {
-      background-color: var(--secondary-black);
+      background-color: var(--secondary-clr);
+    }
+  }
+}
+
+[data-theme="light"] {
+  .pagination_item_selected {
+    background-color: var(--primary-lightgrey);
+  }
+
+  .arrowBtn {
+    color: var(--header-clr);
+
+    &:hover {
+      background-color: var(--primary-lightgrey);
     }
   }
 }
