--- a/src/components/Paintings/Paintings.module.scss
+++ b/src/components/Paintings/Paintings.module.scss
@@ -18,18 +18,14 @@ main {
   }
 
   input {
-    background: var(--secondary-black);
+    background: var(--secondary-clr);
     border: none;
     width: 336px;
     height: 36px;
     border-radius: 4px;
     padding-inline: 3rem;
     position: relative;
-    color: white;
-
-    &:focus {
-      border: var(--primary-lightgrey);
-    }
+    color: var(--primary-lightgrey);
   }
 
   .icon_find {
@@ -39,14 +35,25 @@ main {
     transform: translate(-10%, -50%);
   }
 
-  button {
-    background: var(--secondary-black);
+  .openFilterBtn {
+    background: var(--secondary-clr);
     width: 36px;
     height: 36px;
     border-radius: 4px;
     outline: none;
     border: none;
     cursor: pointer;
+
+    &:hover {
+      background: #cacaca50;
+    }
+  }
+}
+
+[data-theme="light"] {
+  input {
+    border: 1px solid var(--primary-lightgrey);
+    color: var(--primary-darkGrey);
   }
 }
 
@@ -55,6 +62,12 @@ main {
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
   padding-bottom: 1rem;
+
+  .no_matches {
+    p {
+      color: var(--header-clr);
+    }
+  }
 }
 
 .painting_item {
@@ -62,13 +75,33 @@ main {
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  transition: 0.25s ease all;
+
+  &:hover {
+    img {
+      transform: scale(1.05);
+    }
+
+    .painting_item_secondary_info {
+      left: 10%;
+      opacity: 1;
+    }
+
+    .painting_item_first_info {
+      top: 100%;
+      opacity: 0;
+    }
+  }
 
   img {
     width: 100%;
+    transition: 0.25s ease-out all;
+    z-index: 0;
   }
 
   .painting_item_info {
-    background-color: var(--primary-black);
+    background-color: var(--primary-clr);
     position: absolute;
     bottom: 0%;
     width: 80%;
@@ -78,28 +111,55 @@ main {
     flex-direction: column;
     justify-content: center;
     gap: 0.5rem;
+    z-index: 1;
 
     &::before {
       content: "";
       width: 4px;
       height: 42px;
-      background-color: var(--clr-gold);
+      background-color: var(--accent-clr);
       position: absolute;
       left: 0;
       top: 24px;
     }
+  }
+}
 
-    .painting_item_header {
-      font-family: var(--font-headers);
-      font-size: 16px;
-      text-transform: uppercase;
-    }
+.painting_item_first_info {
+  transition: 0.4s ease all;
+  position: absolute;
+  top: 25%;
+  opacity: 1;
 
-    .painting_item_year {
-      font-family: var(--font-years);
-      color: var(--clr-gold);
-      font-weight: bold;
-    }
+  .painting_item_header {
+    font-family: var(--font-headers);
+    font-size: 16px;
+    text-transform: uppercase;
+    color: var(--header-clr);
+  }
+
+  .painting_item_year {
+    font-family: var(--font-years);
+    color: var(--accent-clr);
+    font-weight: bold;
+  }
+}
+
+.painting_item_secondary_info {
+  transition: 0.4s ease all;
+  position: absolute;
+  left: -200%;
+  opacity: 0;
+
+  .painting_item_author {
+    font-family: "commer";
+    text-transform: uppercase;
+    color: var(--header-clr);
+  }
+  .painting_item_location {
+    text-transform: uppercase;
+    color: var(--accent-clr);
+    font-weight: bold;
   }
 }
 
@@ -118,7 +178,7 @@ main {
         content: url("../../../public/icons/arrow_icon_right.png");
         width: 24px;
         height: 100%;
-        background-color: var(--clr-gold);
+        background-color: var(--accent-clr);
         position: absolute;
         right: 0%;
         top: 0;
